--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-    var duoshuoQuery = {short_name: "wayne-hu"};
+    var duoshuoQuery = {short_name: "huanfeng"};
     (function () {
         var ds = document.createElement('script');
         ds.type = 'text/javascript';
